# stemmacodicum

./: .gitignore  AI_ARCHITECTURE_REFERENCE.md  CEBF.md  Claim–Evidence–Argument Provenance Format (CEAPF) v0.1.md  DOCUMENTATION.md  README.md  Stemma Codicum.md  WEB_APP_TUTORIAL.md  _safari_diag.py  my big plan.md  pyproject.toml  web gui rollout plan.md
docs/screenshots/: README.md
scripts/: extract_pdf_images_archive.py  generate_icons.py  generate_readable_titles.py  recover_reference_urls.py
src/stemmacodicum/: __init__.py  __main__.py
src/stemmacodicum/application/dto/: io_models.py
src/stemmacodicum/application/services/: background_import_queue_service.py  ceapf_service.py  claim_service.py  (+13 more)
src/stemmacodicum/cli/: context.py  docling_options.py  main.py
src/stemmacodicum/core/: citation.py  config.py  document_titles.py  errors.py  files.py  hashing.py  ids.py  logging.py  time.py
src/stemmacodicum/web/: __init__.py  app.py
tests/unit/: test_archive_store.py  test_bibtex_importer.py  test_ceapf_service.py  test_citation_ids.py  test_claim_service.py  test_docling_adapter.py  test_document_titles.py  test_evidence_binding_service.py  test_extraction_service.py  test_hashing.py  test_health_service.py  test_ingestion_policy_service.py  test_ingestion_service.py  test_pipeline_service.py  test_reference_service.py  test_reporting_service.py  test_sqlite_concurrency.py  test_structured_data_service.py  test_trace_service.py  test_vector_chunking.py  test_vector_runtime.py  test_vector_service.py  test_verification_service.py  test_web_app.py
(+60 files in other folders)
