[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "stemmacodicum"
version = "0.1.0"
description = "CLI-first claim-to-evidence verification toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
vector = [
  "qdrant-client>=1.9.0",
  "sentence-transformers>=3.0.0",
]

[project.scripts]
stemma = "stemmacodicum.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
